--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,20 +5,20 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "example",
+            "name": "chatwoot example",
             "cwd": "example",
             "request": "launch",
             "type": "dart"
         },
         {
-            "name": "example (profile mode)",
+            "name": "chatwoot example (profile mode)",
             "cwd": "example",
             "request": "launch",
             "type": "dart",
             "flutterMode": "profile"
         },
         {
-            "name": "example (release mode)",
+            "name": "chatwoot example (release mode)",
             "cwd": "example",
             "request": "launch",
             "type": "dart",
