Updating to flutter_chat_ui 1.6.5

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   intl: ^0.17.0  
   async: ^2.5.0
 
+dependency_overrides:
+  flutter_messaging_base:
+    path: ../flutter_messaging_base      
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
